# volare-engine

./: .gitignore  Cargo.toml  README.md  TODO.md  index.html  shape_box_with_text.rs
.github/workflows/: deploy.yml  test-and-build.yml
custom_components/: Cargo.toml
custom_components/src/: lib.rs
custom_components/src/diagrams/: activity.rs  calendar.rs  ichikawa.rs  mod.rs
custom_components/src/document/: mod.rs
custom_components/src/infographics/: mod.rs
custom_components/src/infographics/examples/: annual-report.jsonl  info1.jsonl
demo/: Cargo.toml  README.md
demo/assets/: sample-image.base64
demo/src/: lib.rs  main.rs  measure_text.rs  text_renderer_comparison.rs
image_renderer/: README.md  cargo.toml
image_renderer/src/: lib.rs
svg_generation_poc/: Cargo.toml
svg_generation_poc/src/: main.rs
svg_renderer/: Cargo.toml  README.md
svg_renderer/src/: lib.rs
svg_renderer/test_viewer/: index.html
utils/: README.md  concat-source.sh  printfolder.sh
volare_engine_layout/: Cargo.toml  README.md
volare_engine_layout/.github/workflows/: deploy.yml
volare_engine_layout/docs/: JSONL Diagram Specification.md  JSONL Document components.md  LLM Transform Operations SPEC.md  the-diagram-tree-spec.md
volare_engine_layout/docs/diagrams/: ichikawa.md
volare_engine_layout/docs/examples/: images.jsonl
volare_engine_layout/docs/examples/connectors/: connectors_arrows.jsonl  port_test.jsonl
volare_engine_layout/docs/examples/diagrams/: ichikawa.jsonl
volare_engine_layout/docs/examples/documents/: algorithmic-complexity-reference.jsonl
volare_engine_layout/docs/examples/shapes/: arcs-and-ellipses.jsonl  arcs.jsonl  polylines.jsonl  shapes-reference.jsonl
volare_engine_layout/docs/examples/text/: text-in-box-auto-wrap.jsonl
volare_engine_layout/src/: bounding_box.rs  diagram_builder.rs  diagram_layout.rs  layout.rs  lib.rs  location.rs  parser.rs  renderer_base.rs  session.rs  shape_box.rs  shape_group.rs  shape_text.rs  transform.rs  utils.rs  vertical_stack.rs
volare_engine_layout/src/builder/: mod.rs
volare_engine_layout/src/components/: mod.rs  table.rs
volare_engine_layout/src/constraints/: mod.rs
volare_engine_layout/src/tests/: mod.rs  rotation_tests.rs
wasm_bindings/: Cargo.toml  README.md
wasm_bindings/src/: lib.rs
