[package]
name = "custom_components"
version = "0.1.0"
edition = "2021"

[dependencies]
volare_engine_layout = { path = "../volare_engine_layout" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
textwrap = "0.16.2"
uuid = { version = "1.0", features = ["v4", "js"] }
anyhow = "1.0.99"


[lib]
name = "custom_components"
path = "src/lib.rs"