[package]
name = "volare_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
volare_engine_layout = { path = "../volare_engine_layout" }
svg_renderer = { path = "../svg_renderer" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

# Minimal serde without derive macros to avoid complex deps
serde = "1.0"
serde_json = "1.0"